2003-04-18  Beckett Madden-Woods  <beckett@beckettmw.com> 1.3.4-cvs-b19

	* Patch #530195: Strenghtened image type checking expressions in
	  view_photo.php and util.php.
	
	* Patch #695792: Small bugfix from Andrew (joyoflinux). Hidden
	  photos moved via move_photo.php no longer become un-hidden.
	
	* Patch #710428: Added Joan McGalliard's fix for a bug in
	  slideshow.php and slideshow_low.php introduced in 1.3.4-cvs-b6,
	  which teminated the slideshow early if there were hidden photos
	  in the album.

	* Patch #712159: Added Joan McGalliard's patch to replace the "?&"
	  in the navigator block URLs with just "?" or "&" as appropriate.
	
2003-04-18  Beckett Madden-Woods  <beckett@beckettmw.com> 1.3.4-cvs-b18

	* Added Steve Lacy's auto-rotate patch which lets Gallery
	  automatically attempt to rotate JPEG images on upload, based on
	  the orientation information that some digital cameras store in
	  EXIF data.

2003-04-05  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b17

	* Fixed minor bug in config wizard that runs the "shutterfly without
	  donation" and "fotokasten" print options together on one line.

2003-03-30  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b16

	* Fixed a bug in the mirroring code on win32 where the serial.dat file
	  would wind up with a \r instead of a \n causing the comparison to
	  fail.  Now we get rid of the \n altogether.

2003-02-24  John Kirkland <jpk@bl.org> 1.3.4-cvs-b15

	* Merged GRcreateNewAlbum in gallery_remote2.php with createNewAlbum
	  in util.php per Pierre's request.

2003-02-24  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.4-cvs-b14

	* gallery_remote2.php: check to prevent new album creation to overwrite
	  an existing album.

2003-02-24  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.4-cvs-b13

	* Fixed method name collision between gallery_remote2.php and util.php
	  which caused GalleryRemote to be unable to log in.

2003-02-23  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b12
