@@ -22,17 +22,20 @@
 class Nuke5_User extends Abstract_User {
 	var $db;
 	var $prefix;
-
+	var $fields;
+	
 	function Nuke5_User() {
 		global $gallery;
 		$this->db = $gallery->database{"nuke"};
 		$this->prefix = $gallery->database{"user_prefix"};
+		$this->fields = $gallery->database{'fields'};
 	}
 
 	function loadByUid($uid) {
-		$results = $this->db->query("select uname, name, email from " .
-					$this->prefix . "users " .
-					"where uid='$uid'");
+		$results = $this->db->query('select ' . $this->fields{'uname'} .
+		   ', ' . $this->fields{'name'} . ', ' . $this->fields{'email'} .
+		   ' from ' . $this->prefix . 'users '. 'where ' .
+		   $this->fields{'uid'} . "='$uid'");
 		$row = $this->db->fetch_row($results);
 		$this->username = $row[0];
 		$this->fullname = $row[1];
@@ -43,9 +46,10 @@ class Nuke5_User extends Abstract_User {
 	}
 
 	function loadByUserName($uname) {
-		$results = $this->db->query("select uid, name, email from " .
-					$this->prefix . "users " .
-					"where uname='$uname'");
+		$results = $this->db->query('select ' . $this->fields{'uid'} .
+		   ', ' . $this->fields{'name'} . ', ' . $this->fields{'email'} .
+		   ' from ' . $this->prefix . 'users ' . 'where ' .
+		   $this->fields{'uname'} . "='$uname'");
 		$row = $this->db->fetch_row($results);
 		$this->uid = $row[0];
 		$this->fullname = $row[1];
