@@ -1,3 +1,8 @@
+2003-04-20  Beckett Madden-Woods  <beckett@beckettmw.com> 1.3.4-cvs-b20
+
+	* Gallery now handles the small database structure change
+	  introduced in version 6.5 of PHP-Nuke.
+
 2003-04-18  Beckett Madden-Woods  <beckett@beckettmw.com> 1.3.4-cvs-b19
 
 	* Patch #530195: Strenghtened image type checking expressions in
